MVVM初期整理，Dagger搭建中

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
     <string name="upcoming">Upcoming</string>
     <string name="streaming">Streaming</string>
     <string name="live_text">LIVE</string>
+    <string name="genre">Genre</string>
+    <string name="premuim">Premuim</string>
+    <string name="title">TITLE</string>
+    <string name="lecture">Lecture</string>
 
 </resources>
