继续优化Dagger处理，主页面加载，网络请求处理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
 
     <!-- Plex -->
     <string name="home">Home</string>
+    <string name="mylist">My List</string>
     <string name="discover">Discover</string>
     <string name="library">Library</string>
     <string name="upcoming">Upcoming</string>
