1. Rxjava调整 2. room primary key 要用public修饰,不然编译报错 3. 依赖调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,21 @@
     <string name="live_text">LIVE</string>
     <string name="genre">Genre</string>
     <string name="premuim">Premuim</string>
-    <string name="title">TITLE</string>
-    <string name="lecture">Lecture</string>
-    <string name="movies">Movies</string>
-    <string name="series">Series</string>
-    <string name="animes">Animes</string>
+    <string name="movie_rating">8.5</string>
+    <string name="seasons_8">剧集:8</string>
+    <string name="movie_genres_text">Thriller, Action, Sci Fi </string>
+    <string name="play_trailer">播放 预告片</string>
+    <string name="release_date">发布 日期</string>
+    <string name="synopsis">简介</string>
+    <string name="details">简介描述</string>
+    <string name="starring">评价</string>
+    <string name="sort_by">排序</string>
+    <string name="title">标题</string>
+    <string name="lecture">浏览</string>
+    <string name="movies">电影</string>
+    <string name="series">电视剧</string>
+    <string name="animes">动漫</string>
+    <string name="seasons">剧集</string>
     <string name="genres_list_is_empty">Genres List is empty</string>
     <string name="please_try_another_genre">Please try another genre.</string>
     <string name="search_movies_series">Search Movies, Series,Animes,Streaming…</string>
