--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,11 @@
     <string name="movie_cast_label">演员表</string>
     <string name="relateds">相关推荐</string>
     <string name="latest_channels">最新影片</string>
+    <string name="recommend_movie">推荐影片</string>
+    <string name="trending_movie">流行影片</string>
+    <string name="release_movie">最新发行</string>
+    <string name="popular_movie">最受欢迎</string>
+    <string name="popular_series">流行剧场</string>
     <string name="movie_time">41 min</string>
     <string name="no_relateds_movies_found">未找到相关电影</string>
     <string name="genres_list_is_empty">Genres List is empty</string>
