--- a/onionui/src/main/res/values/strings.xml
+++ b/onionui/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="lake_tahoe_image">Image of Lake Tahoe</string>
     <string name="textview">TextView</string>
     <string name="learn_constraintLayout">learn_constraintLayout</string>
+
+
+    <string name="text_button">Button</string>
+    <!--Instructions-->
+    <string name="instructions_options_title">Theme builder options</string>
+    <string name="instructions_enable_dark_title">Enable dark theme</string>
+
+    <string name="button_label_title">Button</string>
+    <string name="button_left_button_label">Left</string>
+    <string name="button_center_button_label">Center</string>
+    <string name="button_right_button_label">Right</string>
+
+    <string name="fab_label_title">FAB</string>
+    <string name="image_label_title">Image</string>
 </resources>
