--- a/app-ui/src/main/res/values/strings.xml
+++ b/app-ui/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="button">Button</string>
     <string name="lake_tahoe_image">Image of Lake Tahoe</string>
     <string name="textview">TextView</string>
-    <string name="learn_constraintLayout">learn_constraintLayout</string>
+    <string name="learn_constraintLayout">ConstraintLayout Use</string>
+    <string name="learn_material">Material Use</string>
+    <string name="learn_custom_view">Custom View</string>
+    <string name="learn_code_view">Code View</string>
 
 
     <string name="text_button">Button</string>
